@@ -32,6 +32,7 @@ Exceptions:
 """
 
 import array
+from ast import literal_eval
 import codecs
 from email.parser import HeaderParser
 import struct
@@ -49,7 +50,6 @@ if PY3:
         p = HeaderParser()
         return p.parsestr(s).get_content_charset()
 
-    from ast import literal_eval
     import io
     BytesIO = io.BytesIO
     FILE_TYPE = io.IOBase
@@ -63,9 +63,6 @@ else:
     def header_charset(s):
         p = HeaderParser()
         return p.parsestr(s.encode('utf-8', 'ignore')).get_content_charset()
-
-    def literal_eval(s):
-        return eval(s)
 
     from cStringIO import StringIO as BytesIO
     FILE_TYPE = file
